// Fire Extinguisher Management System
// DBML for dbdiagram.io: https://dbml.dbdiagram.io/docs
//
// The app uses database-per-service. Cross-service user references are logical
// text ids only; they are documented as notes, not modeled as DB-level FKs.

Project fire_extinguisher_management {
  database_type: "PostgreSQL"
  Note: "Three independent service databases: fire_auth_service, fire_management_service, fire_notification_service."
}

Enum user_role {
  user
  inspector
  admin
}

Enum extinguisher_type {
  water
  co2
  foam
  dry_chemical
}

Enum extinguisher_size {
  "2.5lb"
  "5lb"
  "9lb"
  "12lb"
}

Enum extinguisher_status {
  active
  maintenance
  expired
  decommissioned
}

Enum inspection_status {
  scheduled
  completed
  cancelled
}

Enum inspection_result {
  pass
  fail
  needs_maintenance
}

Enum notification_status {
  sent
  skipped
  failed
}

Table users {
  id text [pk]
  username text [unique]
  first_name text [not null]
  last_name text [not null]
  display_name text [not null, note: "Derived from first_name + last_name."]
  email text [not null, unique]
  password text [not null]
  role user_role [not null, default: "user"]
  email_verified timestamp
  refresh_token_version integer [not null, default: 1]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  Note: "Auth service database: fire_auth_service."
}

Table email_verification_codes {
  id text [pk]
  user_id text [not null]
  code_hash text [not null]
  attempts integer [not null, default: 0]
  expires_at timestamp [not null]
  created_at timestamp [not null, default: `now()`]

  Note: "Hashed, short-lived OTP for email verification."
}

Table password_reset_codes {
  id text [pk]
  user_id text [not null]
  code_hash text [not null]
  attempts integer [not null, default: 0]
  expires_at timestamp [not null]
  created_at timestamp [not null, default: `now()`]

  Note: "Hashed, short-lived OTP for password recovery."
}

Table extinguishers {
  id text [pk]
  serial_number text [not null, unique]
  location text [not null]
  type extinguisher_type [not null]
  size extinguisher_size [not null]
  installation_date date [not null]
  expiry_date date [not null]
  status extinguisher_status [not null, default: "active"]
  created_by text [note: "Logical users.id reference; not a DB FK."]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  Note: "Management service database: fire_management_service."
}

Table inspections {
  id text [pk]
  extinguisher_id text [not null]
  scheduled_date date [not null]
  scheduled_time text
  status inspection_status [not null, default: "scheduled"]
  result inspection_result
  notes text
  scheduled_by text [note: "Logical users.id reference; not a DB FK."]
  inspector_id text [note: "Logical users.id reference; not a DB FK."]
  completed_at timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table maintenance_logs {
  id text [pk]
  extinguisher_id text [not null]
  inspection_id text
  action_taken text [not null]
  maintenance_date date [not null]
  issues_identified text
  notes text
  inspector_id text [note: "Logical users.id reference; not a DB FK."]
  created_at timestamp [not null, default: `now()`]
}

Table notifications {
  id text [pk]
  type text [not null, note: "Examples: otp, password_reset, inspection_scheduled, maintenance_logged."]
  channel text [not null, default: "email"]
  recipient text [not null]
  subject text [not null]
  status notification_status [not null]
  error text
  metadata jsonb
  created_at timestamp [not null, default: `now()`]

  Note: "Notification service database: fire_notification_service."
}

Ref: email_verification_codes.user_id > users.id [delete: cascade]
Ref: password_reset_codes.user_id > users.id [delete: cascade]
Ref: inspections.extinguisher_id > extinguishers.id [delete: cascade]
Ref: maintenance_logs.extinguisher_id > extinguishers.id [delete: cascade]
Ref: maintenance_logs.inspection_id > inspections.id [delete: set null]
